--- a/miApp001/src/app/uno/uno.page.html
+++ b/miApp001/src/app/uno/uno.page.html
@@ -1,13 +1,29 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>uno</ion-title>
+    <ion-title>Uno</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">uno</ion-title>
-    </ion-toolbar>
-  </ion-header>
+
+  <ion-list>
+
+    <ion-list-header color="primary">
+      <ion-label><b>Hardware</b></ion-label>
+    </ion-list-header>
+
+    <ion-item>
+      <ion-label>RAM</ion-label>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>CPU</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>SSD/HDD/M2</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>GPU</ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
