--- a/miApp001/src/app/uno/uno.page.html
+++ b/miApp001/src/app/uno/uno.page.html
@@ -27,5 +27,50 @@
     </ion-item>
   </ion-list>
 
-  
+  <h1>Botones</h1>
+  <ion-button>Enviar</ion-button>
+  <ion-button shape="round">Enviar</ion-button>
+  <ion-button size="small">Enviar</ion-button>
+  <ion-button size="large">Enviar</ion-button>
+  <ion-button fill="outline">Enviar</ion-button>
+  <ion-button expand="block">Enviar</ion-button>
+  <ion-button color="danger">Enviar</ion-button>
+  <ion-button color="warning">Enviar</ion-button>
+  <ion-button color="success">Enviar</ion-button>
+  <ion-button color="medium">Enviar</ion-button>
+  <ion-button color="dark">Enviar</ion-button>
+  <ion-button color="tertiary">Enviar</ion-button>
+
+  <ion-button color="tertiary" shape="round" fill="outline" expand="block">Enviar</ion-button>
+
+  <ion-button>
+    <ion-icon slot="icon-only" name="add"></ion-icon>
+  </ion-button>
+  <ion-button>Eliminar
+    <ion-icon slot="icon-only" name="remove"></ion-icon>
+  </ion-button>
+  <ion-button>Borrar
+    <ion-icon slot="start" name="trash"></ion-icon>
+  </ion-button>
+  <ion-button>ok
+    <ion-icon slot="end" name="checkmark-circle"></ion-icon>
+  </ion-button>
+  <ion-button>ok
+    <ion-icon slot="end" name="checkmark-circle-outline"></ion-icon>
+  </ion-button>
+
+<!--
+  https://ionic.io/ionicons  
+-->
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-title>Footer</ion-title>
+    <ion-button slot="end">Enviar</ion-button>
+  </ion-toolbar>
+
+</ion-footer>
+
+
+
