--- a/miApp001/src/app/menu/menu.page.html
+++ b/miApp001/src/app/menu/menu.page.html
@@ -24,7 +24,8 @@
   </ion-button>
 
   <a href="/tres">| Ver los inputs disponibles |</a>
-
+  <br><br><br>
+  <a href="/cuatro" expand="block">| Tarjetas |</a>
 </ion-list>
 
 </ion-content>
