--- a/miApp001/src/app/cuatro/cuatro.page.html
+++ b/miApp001/src/app/cuatro/cuatro.page.html
@@ -10,6 +10,19 @@
 <ion-content [fullscreen]="true">
 
   <ion-card>
+    <img src="assets/playa1.jpg" alt="playa">
+    <ion-card-header>
+      <ion-card-subtitle>Pais: Brasil</ion-card-subtitle>
+      <ion-card-title>Buzio</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      Playas color turquesa, apto para todo publico, hotel 3 estrellas.
+      tour por ciudades y monumentos historicos.
+      Uso de todas las instalaciones del hotel.
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
     <ion-card-header>
       <ion-card-subtitle>Pais: Brasil</ion-card-subtitle>
       <ion-card-title>Punta de Cana</ion-card-title>
