--- a/miApp001/src/app/menu/menu.page.html
+++ b/miApp001/src/app/menu/menu.page.html
@@ -26,6 +26,15 @@
   <a href="/tres">| Ver los inputs disponibles |</a>
   <br><br><br>
   <a href="/cuatro" expand="block">| Tarjetas |</a>
+
+<ion-item>
+  <ion-button [routerLink]="['/cinco']" size="large" shape="round">
+    <ion-icon slot="end" name="alert-circle"></ion-icon>
+    Alertas
+  </ion-button>
+</ion-item>
+
+
 </ion-list>
 
 </ion-content>
