--- a/miApp001/src/app/menu/menu.page.html
+++ b/miApp001/src/app/menu/menu.page.html
@@ -25,7 +25,7 @@
 
   <a href="/tres">| Ver los inputs disponibles |</a>
   <br><br><br>
-  <a href="/cuatro" expand="block">| Tarjetas |</a>
+  <a href="/cuatro">| Tarjetas |</a>
 
 <ion-item>
   <ion-button [routerLink]="['/cinco']" size="large" shape="round">
@@ -33,6 +33,10 @@
     Alertas
   </ion-button>
 </ion-item>
+
+
+<br><br><br>
+<a href="/seis">| Grilla, Atributos y mostrar datos |</a>
 
 
 </ion-list>
