--- a/miApp001/src/app/seis/seis.page.html
+++ b/miApp001/src/app/seis/seis.page.html
@@ -11,19 +11,42 @@
 
   <ion-grid fixed>
     <ion-row>
-      <ion-col size="6">Nombre</ion-col>
-      <ion-col size="6">{{ nombre }}</ion-col>
+      <ion-col size="4">Nombre</ion-col>
+      <ion-col size="8">{{ nombre }}</ion-col>
     </ion-row>
     <ion-row>
-      <ion-col size="6">Edad</ion-col>
-      <ion-col size="6">{{ edad }}</ion-col>
+      <ion-col size="4">Edad</ion-col>
+      <ion-col size="8">{{ edad }}</ion-col>
     </ion-row>
     <ion-row>
-      <ion-col size="3">Mensaje</ion-col>
-      <ion-col size="9">{{ mensaje }}</ion-col>
+      <ion-col size="4">Mensaje</ion-col>
+      <ion-col size="8">{{ mensaje }}</ion-col>
     </ion-row>
+<!-- Agregar en grilla 3 botones uno agregar,
+  Eliminar y Editar. Deben tener distintos colores
+  e icono adecuado a la acciona a realizar
+-->
+  <ion-row>
+    <ion-col size="4">
+      <ion-button color="success" expand="block">
+        <ion-icon slot="start" name="add"></ion-icon>
+        Agregar
+      </ion-button>
+    </ion-col>
+    <ion-col size="4">
+      <ion-button color="danger" expand="block">
+        <ion-icon slot="start" name="remove"></ion-icon>
+        Eliminar
+      </ion-button>
+    </ion-col>
+    <ion-col size="4">
+      <ion-button color="warning" expand="block">
+        <ion-icon slot="start" name="create"></ion-icon>
+        Editar
+      </ion-button>
+    </ion-col>
+  </ion-row>
   </ion-grid>
-
 
 </ion-content>
 
