--- a/miApp001/src/app/seis/seis.page.html
+++ b/miApp001/src/app/seis/seis.page.html
@@ -53,6 +53,9 @@
 <ion-list>
   <ion-item *ngFor="let asignatura of asignaturas">
     <ion-label>{{asignatura.nombre | uppercase }}</ion-label> <!-- lowercase-->
+    <ion-label>{{asignatura.nombre | uppercase | slice: 0:3 }}</ion-label> 
+    <ion-label>{{asignatura.nombre.substring(0,3) | uppercase }}</ion-label> 
+    <ion-label>{{asignatura.nota | number:'1.0-0'}}</ion-label> 
   </ion-item>
 
 
