--- a/miApp001/src/app/menu/menu.page.html
+++ b/miApp001/src/app/menu/menu.page.html
@@ -37,6 +37,7 @@
 
 <br><br><br>
 <a href="/seis">| Grilla, Atributos y mostrar datos |</a>
+<a href="/siete">| Toast y Directiva angular para atributos |</a>
 
 
 </ion-list>
