--- a/miApp001/src/app/siete/siete.page.html
+++ b/miApp001/src/app/siete/siete.page.html
@@ -37,6 +37,9 @@
 <ion-button (click)="sumar()">
   <ion-icon slot="end" name="add"></ion-icon>Sumar
 </ion-button>
+<ion-button (click)="limpiar()" color="medium">
+  <ion-icon slot="end" name="trash"></ion-icon>Limpiar
+</ion-button>
 <ion-item>
   <ion-label>Resultado: {{ resultado }}</ion-label>
 </ion-item>
