--- a/miApp001/src/app/menu/menu.page.html
+++ b/miApp001/src/app/menu/menu.page.html
@@ -38,6 +38,8 @@
 <br><br><br>
 <a href="/seis">| Grilla, Atributos y mostrar datos |</a>
 <a href="/siete">| Toast y Directiva angular para atributos |</a>
+<br>
+<a href="/ocho">| FAB y modal |</a>
 
 
 </ion-list>
