--- a/miApp001/src/app/ocho/ocho.page.html
+++ b/miApp001/src/app/ocho/ocho.page.html
@@ -8,12 +8,20 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+<!-- 
+  Ejercicio 15: Promediar 3 notas y mostrar si aprobo o no
+  usando el fab, toast e input como componente.
+-->
+  <h1>Promedio de notas</h1>
+<ion-label>Nota 1</ion-label><input type="number" min="10" max="70" [(ngModel)]="n1">
+<ion-label>Nota 2</ion-label><input type="number" min="10" max="70" [(ngModel)]="n2">
+<ion-label>Nota 3</ion-label><input type="number" min="10" max="70" [(ngModel)]="n3">
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button><ion-icon name="code"></ion-icon></ion-fab-button>
     <ion-fab-list side="start">
       <ion-fab-button href="menu"><ion-icon name="menu"></ion-icon></ion-fab-button>
-      <ion-fab-button href="https://angular.dev/"><ion-icon name="logo-angular"></ion-icon></ion-fab-button>
+      <ion-fab-button (click)="promediar()"><ion-icon name="calculator"></ion-icon></ion-fab-button>
     </ion-fab-list>
     <ion-fab-list side="top">
       <ion-fab-button href="https://ionic.io/"><ion-icon name="logo-ionic"></ion-icon></ion-fab-button>
@@ -23,5 +31,23 @@
       <ion-fab-button href="https://google.cl" target="_blank"><ion-icon name="logo-google"></ion-icon></ion-fab-button>
     </ion-fab-list>
   </ion-fab>
+  <ion-button (click)="verModal()">
+    <ion-icon slot="icon-only" name="eye"></ion-icon>
+  </ion-button>
+  <ion-modal [isOpen]="mostrar">
+    <ng-template>
 
+      <ion-header>
+        <ion-toolbar>
+          <ion-title>Ventana Modal</ion-title>
+          <ion-buttons slot="end">
+            <ion-button (click)="verModal()" color="primary">Cerrar</ion-button>
+          </ion-buttons>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content>
+        <p>Ejemplo de una ventana modal</p>
+      </ion-content>
+    </ng-template>
+  </ion-modal>
 </ion-content>
