--- a/miApp001_EA2/src/app/tercera-detalle/tercera-detalle.page.html
+++ b/miApp001_EA2/src/app/tercera-detalle/tercera-detalle.page.html
@@ -18,4 +18,16 @@
     un chiquillo/a
   </ion-card-content>
 </ion-card>
+<ion-row>
+  <ion-col size="6">
+    <ion-button (click)="no()" color="secondary" expand="block">
+      <ion-icon slot="icon-only" name="close-circle-outline"></ion-icon>
+    </ion-button>
+  </ion-col>
+  <ion-col size="6">
+    <ion-button (click)="si()" color="danger" expand="block">
+      <ion-icon slot="icon-only" name="heart-circle-outline"></ion-icon>
+    </ion-button>
+  </ion-col>
+</ion-row>
 </ion-content>
