--- a/miApp001_EA2/src/app/quinta/quinta.page.html
+++ b/miApp001_EA2/src/app/quinta/quinta.page.html
@@ -38,7 +38,7 @@
     <ion-fab-button><ion-icon name="close"></ion-icon></ion-fab-button>
     <ion-fab-button><ion-icon name="search"></ion-icon></ion-fab-button>
     <ion-fab-button><ion-icon name="list"></ion-icon></ion-fab-button>
-    <ion-fab-button><ion-icon name="trash"></ion-icon></ion-fab-button>
+    <ion-fab-button (click)="limpiar()"><ion-icon name="backspace"></ion-icon></ion-fab-button>
   </ion-fab-list>
 </ion-fab>
 </ion-content>
