--- a/miApp001_EA2/src/app/quinta/quinta.page.html
+++ b/miApp001_EA2/src/app/quinta/quinta.page.html
@@ -35,8 +35,8 @@
   <ion-fab-button color="success"><ion-icon name="menu"></ion-icon></ion-fab-button>
   <ion-fab-list side="top">
     <ion-fab-button (click)="guardar()"><ion-icon name="save"></ion-icon></ion-fab-button>
-    <ion-fab-button><ion-icon name="close"></ion-icon></ion-fab-button>
-    <ion-fab-button><ion-icon name="search"></ion-icon></ion-fab-button>
+    <ion-fab-button (click)="eliminar()"><ion-icon name="close"></ion-icon></ion-fab-button>
+    <ion-fab-button (click)="leer()"><ion-icon name="search"></ion-icon></ion-fab-button>
     <ion-fab-button><ion-icon name="list"></ion-icon></ion-fab-button>
     <ion-fab-button (click)="limpiar()"><ion-icon name="backspace"></ion-icon></ion-fab-button>
   </ion-fab-list>
