--- a/miApp001_EA2/src/app/quinta/quinta.page.html
+++ b/miApp001_EA2/src/app/quinta/quinta.page.html
@@ -31,13 +31,26 @@
     <ion-label position="floating">Año Nacimiento</ion-label>
     <ion-input type="number" [(ngModel)]="persona.anio"></ion-input>
   </ion-item>
+
+  <div *ngIf="personas.length > 0">
+    <h1>Listado de personas</h1>
+    <ion-grid fixed>
+      <ion-row *ngFor="let p of personas">
+        <ion-col size="3">{{p.rut}}</ion-col>
+        <ion-col size="3">{{p.nombre}}</ion-col>
+        <ion-col size="3">{{p.telefono}}</ion-col>
+        <ion-col size="3">{{p.correo}}</ion-col>
+      </ion-row>
+    </ion-grid>
+  </div>
+
 <ion-fab vertical="bottom" horizontal="end" slot="fixed">
   <ion-fab-button color="success"><ion-icon name="menu"></ion-icon></ion-fab-button>
   <ion-fab-list side="top">
     <ion-fab-button (click)="guardar()"><ion-icon name="save"></ion-icon></ion-fab-button>
     <ion-fab-button (click)="eliminar()"><ion-icon name="close"></ion-icon></ion-fab-button>
     <ion-fab-button (click)="leer()"><ion-icon name="search"></ion-icon></ion-fab-button>
-    <ion-fab-button><ion-icon name="list"></ion-icon></ion-fab-button>
+    <ion-fab-button (click)="listar()"><ion-icon name="list"></ion-icon></ion-fab-button>
     <ion-fab-button (click)="limpiar()"><ion-icon name="backspace"></ion-icon></ion-fab-button>
   </ion-fab-list>
 </ion-fab>
