--- a/miApp001_EA2/src/app/sexta/sexta.page.html
+++ b/miApp001_EA2/src/app/sexta/sexta.page.html
@@ -5,5 +5,11 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-
+  
+  <ion-list>
+    <ion-item *ngFor="let usuario of listado">
+      <ion-label>{{usuario.name}}</ion-label>
+      <ion-label>{{usuario.username}}</ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
